--- a/src/card.css
+++ b/src/card.css
@@ -1,11 +1,14 @@
 
 
-.card .dflex{
+.card .d-flex{
     height: 100%;
     min-height: 0;
 }
 .card {
     user-select: none;
+    display:flex;
+    flex-direction: column;
+    max-height: 100%;
 }
 
 .swipeLeft
