--- a/src/pop-up_view.css
+++ b/src/pop-up_view.css
@@ -44,11 +44,11 @@
   background-color: #e6dac7;
   color: black;
   position: absolute;
-  width: 600px;
+  width: 400px;
   max-width: 100%;
   padding: 30px 50px;
   border-radius: 5px;
-  text-align: left;
+  text-align: right;
   z-index: 2100;
   pointer-events:none;
 }
