--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ html, body { height: 100%; margin: 0; }
 }
 
 .layout div {
-  background-color: white;
+  /* background-color: white;*/
   padding: 10px;
   min-width: 0;
 }
@@ -66,8 +66,8 @@ html, body { height: 100%; margin: 0; }
 }
 
 .box{
-  background-color: green;
-  border: 5px solid black;
+  background-color: #03735f;
+  border: 5px #03735f;
   padding: 50px;
   margin: 20px;
   border-radius: 10px;
@@ -79,6 +79,8 @@ html, body { height: 100%; margin: 0; }
 .box img {
   max-width: 100%;
   max-height: 100%;
+  background-color: white;
+  border-radius: 10px;
   object-fit: contain;
 }
 
