--- a/src/pop-up_view.css
+++ b/src/pop-up_view.css
@@ -59,3 +59,37 @@
   pointer-events: none;
 
 }
+
+
+
+.objects_pop-up-container {
+  display: block;  
+  position: fixed;
+  inset:0;
+  opacity: 0;
+  pointer-events: none;
+  height: 100vh ;
+  width: 100vw;
+  z-index: 2000;
+}
+
+.objects_pop-up {
+  background-color: #03735f;
+  border: 5px solid white;
+  color: white;
+  position: absolute;
+  width: 400px;
+  max-width: 100%;
+  padding: 30px 50px;
+  border-radius: 5px;
+  text-align: right;
+  z-index: 2100;
+  pointer-events:none;
+}
+
+.objects_pop-up-container.show {
+  opacity: 1;
+  display:block;
+  pointer-events: none;
+
+}
