--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,6 @@ html, body { height: 100%; margin: 0; }
 }
 
 .layout div {
-  /* background-color: white;*/
   padding: 10px;
   min-width: 0;
 }
@@ -143,3 +142,46 @@ html, body { height: 100%; margin: 0; }
   object-fit: contain;
 }
 
+.containerJV {
+  display: flex;         
+  align-items: center;   
+  height: auto;
+  margin-top: 10px;
+  gap: 10px;  
+  justify-content: center;    
+  padding: 0; 
+  margin-bottom: 10px;
+}
+
+.boxJV {
+  width: 50px;   
+  height: 50px;                   
+  border: 5px solid  #03735f;
+  background-color: white;
+  text-align: center;
+  align-items: center;
+  justify-self: center;
+  overflow: hidden;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+.boxJV img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center; 
+  display: block;
+  padding: 0;
+}
+
+.boxJV img[src=""],
+.boxJV img:not([src]) {
+  display: none;
+}
+
+.layout .containerJV,
+.layout .containerJV * {
+  padding: 0; 
+  }
